--- a/radar/Tpl/layout.html
+++ b/radar/Tpl/layout.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <title>信息审查雷达</title>
     <include file="./Tpl/include.html"/>
+    <style type="text/css">
+
+    </style>
   </head>
 <body>
  <!-- /navbar -->
