--- a/radar/Tpl/login.html
+++ b/radar/Tpl/login.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>登录</title>
 	<include file="./Tpl/include.html"/>
-    <link href="./Tpl/css/signin.css" rel="stylesheet" type="text/css">
+    <link href="../Public/css/signin.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 {__NOLAYOUT__}
 <div class="account-container stacked">
 	<div class="content clearfix">
-		<form action="./Index/index" method="post">
+		<form action="__APP__/Index/index" method="post">
 			<h1>信息审查雷达</h1>		
 			<div class="login-fields">
 				<div class="field">
