--- a/radar/Tpl/site/querysite.html
+++ b/radar/Tpl/site/querysite.html
@@ -54,7 +54,7 @@
 								<th>最后修改时间</th>
 								<th>绑定关键词</th>
 								<th>检测网页数量</th>
-								<th>可以网页数量</th>
+								<th>可疑网页数量</th>
 								<th class="td-actions">操作</th>
 							</tr>
 						</thead>
