--- a/radar/Tpl/footer.html
+++ b/radar/Tpl/footer.html
@@ -1,12 +1,12 @@
-<div class="footer">
+<!-- <div class="footer">
     <div class="container">
         <div class="row">
             <div id="footer-copyright" class="span6">© 2012-13 Calculus Studio.</div>
-            
         </div>
     </div>
-</div>
+</div> -->
 
 <script src="../Public/js/jquery-1.8.3.min.js"></script>
 <script src="../Public/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="../Public/js/bootstrap.min.js"></script>
+<script src="../Public/js/zepto.icheck.js"></script>
