--- a/radar/Tpl/keyword/addkeyword.html
+++ b/radar/Tpl/keyword/addkeyword.html
@@ -18,18 +18,18 @@
                 </div> 
                 <div class="widget-content">
                     <br />
-                    <form action="/" id="validation-form" class="form-horizontal">
+                    <form action="__URL__/save" id="validation-form" class="form-horizontal">
                         <fieldset>
                             <div class="control-group">
-                              <label class="control-label" for="name">关键词</label>
+                              <label class="control-label" for="keyword">关键词</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="name" id="name">
+                                <input type="text" class="input-large" name="keyword" id="keyword">
                               </div>
                             </div>
                             
                             <div class="form-actions">
-                              <button type="submit" class="btn btn-danger btn">Validate</button>&nbsp;&nbsp;
-                              <button type="reset" class="btn">Cancel</button>
+                              <button type="submit" class="btn btn-danger btn">添加</button>&nbsp;&nbsp;
+                              <button type="reset" class="btn">取消</button>
                             </div>
                           </fieldset>
                         </form>
