--- a/radar/Tpl/keyword/querykeyword.html
+++ b/radar/Tpl/keyword/querykeyword.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>关键词</title>
   </head>
 <body>
@@ -19,8 +18,8 @@
 				</div>
 				<div class="widget-content">
 				
-						    <form class="pagination form-inline text-center">
-    <input type="text" placeholder="Email">
+						    <form action="__URL__/query" method="post" class="pagination form-inline text-center">
+    <input name="keyword" type="text" id="keyword" placeholder="Email">
     <button type="submit" class="btn glow  btn-primary">查询</button>
     </form>
 					
