--- a/radar/Tpl/Test/test.html
+++ b/radar/Tpl/Test/test.html
@@ -4,13 +4,13 @@
   </head>
   <body>
       {__NOLAYOUT__}
-      <volist name="data" id="vo">
+      <!-- <volist name="data" id="vo">
           {$vo.id}--{$vo.data}
           <br/>  
       </volist>
       PUBLIC:{__PUBLIC__}<br/>
       URL:{__URL__}<br/>
       ../Public<br/>
-      __APP__<br>
+      __APP__<br> -->
   </body>
   </html>
