--- a/radar/Tpl/layout.html
+++ b/radar/Tpl/layout.html
@@ -6,15 +6,14 @@
     <meta charset="utf-8">
     <title>信息审查雷达</title>
     <include file="./Tpl/include.html"/>
-    <script type="text/javascript">
-        $('input').iCheck();
-    </script>
   </head>
 <body>
  <!-- /navbar -->
  <include file="./Tpl/header.html"/>   
 <include file="./Tpl/menu.html"/>
 {__CONTENT__}   
-<include file="./Tpl/footer.html"/>
+<script type="text/javascript">
+        // $('input').iCheck();
+</script>
 </body>
 </html>
