--- a/radar/Tpl/footer.html
+++ b/radar/Tpl/footer.html
@@ -6,7 +6,5 @@
     </div>
 </div> -->
 
-<script src="../Public/js/jquery-1.8.3.min.js"></script>
-<script src="../Public/js/jquery-ui-1.10.0.custom.min.js"></script>
-<script src="../Public/js/bootstrap.min.js"></script>
-<script src="../Public/js/zepto.icheck.js"></script>
+
+<!-- <script src="../Public/js/zepto.icheck.js"></script> -->
