--- a/radar/Tpl/site/addsite.html
+++ b/radar/Tpl/site/addsite.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <title>添加站点</title>
-  </head>
-<body>
-
 <div class="main">
     <div class="container">
       <div class="row">
@@ -18,42 +9,43 @@
                 </div> 
                 <div class="widget-content">
                     <br />
-                    <form action="/" id="validation-form" class="form-horizontal">
+                    <form id="validation-form" class="form-horizontal" method="POST">
                         <fieldset>
+                            <input type="hidden" name="id" value="{$s.id}">
                             <div class="control-group">
-                              <label class="control-label" for="name">网站名称</label>
+                              <label class="control-label" for="siteName">网站名称</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="name" id="name">
+                                <input type="text" class="input-large" name="siteName" id="siteName" value="{$s.siteName}">
                               </div>
                             </div>
                             <div class="control-group">
-                              <label class="control-label" for="email">入口地址</label>
+                              <label class="control-label" for="feedUrl">入口地址</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="email" id="email">
+                                <input type="text" class="input-large" name="feedUrl" id="feedUrl" value="{$s.feedUrl}">
                               </div>
                             </div>
                             <div class="control-group">
-                              <label class="control-label" for="subject">管理员</label>
+                              <label class="control-label" for="adminName">管理员</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="subject" id="subject">
+                                <input type="text" class="input-large" name="adminName" id="adminName" value="{$s.adminName}">
                               </div>
                             </div>
                              <div class="control-group">
-                              <label class="control-label" for="subject">管理员电话</label>
+                              <label class="control-label" for="adminTel">管理员电话</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="subject" id="subject">
+                                <input type="text" class="input-large" name="adminTel" id="adminTel" value="{$s.adminTel}">
                               </div>
                             </div>
                              <div class="control-group">
-                              <label class="control-label" for="subject">管理员邮箱</label>
+                              <label class="control-label" for="adminEmail">管理员邮箱</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="subject" id="subject">
+                                <input type="text" class="input-large" name="adminEmail" id="adminEmail" value="{$s.adminEmail}">
                               </div>
                             </div>
                           <div class="control-group">
-                            <label class="control-label" for="validateSelect">监控频率</label>
+                            <label class="control-label" for="monitorExp">监控频率</label>
                             <div class="controls">
-                              <select id="validateSelect" name="validateSelect">
+                              <select id="monitorExp" name="monitorExp">
                                 <option value="">请选择...</option>
                                 <option value="1">每小时</option>
                                 <option value="2">每天</option>
@@ -61,9 +53,9 @@
                             </div>
                           </div>
                           <div class="control-group">
-                            <label class="control-label" for="validateSelect">监控模式</label>
+                            <label class="control-label" for="runMode">监控模式</label>
                             <div class="controls">
-                              <select id="validateSelect" name="validateSelect">
+                              <select id="runMode" name="runMode" value="{$s.runMode}">
                                 <option value="">请选择...</option>
                                 <option value="1">主动监控</option>
                                 <option value="2">被动监控</option>
@@ -75,22 +67,22 @@
                             <label class="control-label">关键词</label>
                             <div class="controls">
                               <label class="checkbox">
-                                <input type="checkbox" name="validateCheckbox" value="option1">
+                                <input type="checkbox" name="keywords[]" value="keyword1">
                                 关键词1
                               </label>
                               <label class="checkbox">
-                                <input type="checkbox" name="validateCheckbox" value="option2">
+                                <input type="checkbox" name="keywords[]" value="keyword2">
                                 关键词2
                               </label>
                               <label class="checkbox">
-                                <input type="checkbox" name="validateCheckbox" value="option3">
+                                <input type="checkbox" name="keywords[]" value="keyword3">
                                关键词3
                               </label>
                             </div>
                           </div>
                             <div class="form-actions">
-                              <button type="submit" class="btn btn-danger btn">Validate</button>&nbsp;&nbsp;
-                              <button type="reset" class="btn">Cancel</button>
+                              <button type="submit" class="btn btn-danger btn">添加</button>&nbsp;&nbsp;
+                              <button type="return" class="btn">返回</button>
                             </div>
                           </fieldset>
                         </form>
@@ -100,5 +92,21 @@
       </div>
     </div> 
 </div>
-</body>
-</html>
+<script type="text/javascript">
+$("#monitorExp").find("option[value='{$s.monitorExp}']").attr("selected",true);
+$("#runMode").find("option[value='{$s.runMode}']").attr("selected",true);
+
+$('{$s.keywords}'.split("|")).each(function(){
+  $("input[value='"+this+"']").attr("checked",true);
+})
+
+$("button[type='submit']").click(function(){
+  $("form").attr("action","__URL__/save");
+  $("form").submit();
+})
+
+$("button[type='return']").click(function(){
+  $("form").attr("action","__URL__/query");
+  $("form").submit();
+})
+</script>
