--- a/radar/Tpl/include.html
+++ b/radar/Tpl/include.html
@@ -10,6 +10,8 @@
 <link href="../Public/css/dashboard.css" rel="stylesheet">
 <link href="../Public/css/custom.css" rel="stylesheet">
 <link href="../Public/css/reports.css" rel="stylesheet">
+<link href="../Public/css/messenger.css" rel="stylesheet">
+<link href="../Public/css/messenger-theme-future.css" rel="stylesheet">
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -18,4 +20,5 @@
 <script src="../Public/js/jquery-1.8.3.min.js"></script>
 <script src="../Public/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="../Public/js/bootstrap.min.js"></script>
+<script src="../Public/js/messenger.min.js"></script>
 <!-- <script src="../Public/js/zepto.icheck.js"></script> -->
