--- a/radar/Tpl/account/edit.html
+++ b/radar/Tpl/account/edit.html
@@ -9,7 +9,7 @@
                 </div> 
                 <div class="widget-content">
                     <br />
-                    <form action="__URL__/save" method="post" class="form-horizontal" id="validation-form">
+                    <form action="__URL__/update" method="post" class="form-horizontal" id="validation-form">
                         <fieldset>
                             <div class="control-group">
                               <label class="control-label" for="userId">用户ID</label>
@@ -32,13 +32,13 @@
                             <div class="control-group">
                               <label class="control-label" for="pwd">密码</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="pwd" id="pwd">
+                                <input type="password" class="input-large" name="pwd" id="pwd" placeholder="如果不更改请留空">
                               </div>
                             </div>
                             <div class="control-group">
                               <label class="control-label" for="repwd">重复密码</label>
                               <div class="controls">
-                                <input type="text" class="input-large" name="repwd" id="repwd">
+                                <input type="password" class="input-large" name="repwd" id="repwd" placeholder="如果不更改请留空">
                               </div>
                             </div>
                             
