--- a/radar/Tpl/keyword/edit.html
+++ b/radar/Tpl/keyword/edit.html
@@ -9,7 +9,7 @@
                 </div> 
                 <div class="widget-content">
                     <br />
-                    <form action="__URL__/update" id="validation-form" class="form-horizontal">
+                    <form action="__URL__/update" method="post" class="form-horizontal" id="validation-form">
                         <fieldset>
                             <div class="control-group">
                               <label class="control-label" for="keyword">关键词</label>
