--- a/radar/Tpl/keyword/query.html
+++ b/radar/Tpl/keyword/query.html
@@ -46,10 +46,8 @@
 								<td class="td-actions">
 									<a href="__URL__/edit?id={$v.id}" class="btn btn-small btn-warning">
 										<i class="btn-icon-only icon-ok"></i>										
-									</a>
-									
-									<a href="javascript:;" class="btn btn-small">
-										<i class="btn-icon-only icon-remove"></i>										
+									</a><a href="__URL__/delete?id={$v.id}" class="btn btn-small" onclick="return confirm(确定删除吗？);">
+										<i class="btn-icon-only icon-trash"></i>										
 									</a>
 								</td>
 							</tr>	
