--- a/radar/Tpl/include.html
+++ b/radar/Tpl/include.html
@@ -17,7 +17,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<script src="../Public/js/jquery.js"></script>
+<script src="../Public/js/jquery-1.8.3.min.js"></script>
 <script src="../Public/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="../Public/js/bootstrap.min.js"></script>
 <script src="../Public/js/messenger.min.js"></script>
