--- a/radar/Tpl/index0.html
+++ b/radar/Tpl/index0.html
@@ -121,6 +121,7 @@
       </div>
     </div>
 </div>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=1.4"></script>
 <script type="text/javascript">
 $(function(){
 	getdata();
