--- a/radar/Tpl/keyword/query.html
+++ b/radar/Tpl/keyword/query.html
@@ -46,7 +46,7 @@
 								<td class="td-actions">
 									<a href="__URL__/edit?id={$v.id}" class="btn btn-small btn-warning">
 										<i class="btn-icon-only icon-ok"></i>										
-									</a><a href="__URL__/delete?id={$v.id}" class="btn btn-small" onclick="return confirm(确定删除吗？);">
+									</a><a href="__URL__/delete?id={$v.id}" class="btn btn-small" onclick="return confirm('确定删除吗？');">
 										<i class="btn-icon-only icon-trash"></i>										
 									</a>
 								</td>
