--- a/radar/Tpl/system/auditlog.html
+++ b/radar/Tpl/system/auditlog.html
@@ -11,7 +11,7 @@
 				<div class="widget-content">
 				
 						    <form class="pagination form-inline text-center">
-    <input type="text" placeholder="Email">
+    <input name="keyword" type="text" id="keyword" placeholder="请输入关键字">
     <button type="submit" class="btn glow  btn-primary">查询</button>
     <button type="submit" class="btn glow  btn-primary">添加</button>
     </form>
