--- a/radar/Tpl/warn/querywarn.html
+++ b/radar/Tpl/warn/querywarn.html
@@ -63,7 +63,7 @@
 											<td>{$v.digist}</td>
 										</if>
 										<td>{$v.checkDate}</td>
-										<td><if condition="$v.isHandle eq 1"><i class="btn btn-success btn-mini" id="label{$v.id}">已处理</i><else /><i class="btn btn-warning btn-mini" id="label{$v.id}">未处理</i></if></td>
+										<td><if condition="$v.isHandle eq 1"><span class="label label-success label-mini" id="label{$v.id}">已处理</span><else /><span class="label label-warning label-mini" id="label{$v.id}">未处理</span></if></td>
 										<td>已生成</td>
 										<td class="td-actions">
 											<a href="javascript:;" class="btn btn-small btn-warning warn_sendmailbtn" warndata={$v.id}> <i class="btn-icon-only icon-envelope" title="发送通知"></i>
@@ -100,11 +100,16 @@
 	<script type="text/javascript">
 	$(document).ready(function(e) {
                 $(".warn_sendmailbtn").click(function(e) {
+			$.globalMessenger().post({
+					message: '邮件发送中.',
+					type: 'info',
+					showCloseButton: false
+					});
 			var warndata = $(this).attr("warndata");
 			$.ajax({url:"__URL__/mailnotify",type:"POST",data:{id:warndata},dataType:"json",success: function(resp){
 				if(resp.success){
-                                	$("#label"+warndata).addClass('btn-success');
-                                        $("#label"+warndata).removeClass('btn-warning');
+                                	$("#label"+warndata).addClass('label-success');
+                                        $("#label"+warndata).removeClass('label-warning');
 					 $("#label"+warndata).html("已处理");
 					$.globalMessenger().post({
 					message: '发送成功.',
