--- a/radar/Tpl/system/auditlog.html
+++ b/radar/Tpl/system/auditlog.html
@@ -54,23 +54,11 @@
                                                         </volist>
 							</tbody>
 						</table>
-						{$page}
 				</div>
 				<div class="widget-content text-right">
-				<div id="example" class="pagination10"></div>
+				<div class="pagination"><ul>{$page}</ul></div>
 				</div>
 			</div>
 		</div>	
     </div>
 </div>
-
-<script src="../Public/js/bootstrap-paginator.min.js"></script>
-<script type="text/javascript">
-var options = {
-            currentPage: 4,
-            totalPages: 10,
-	    	numberOfPages:5
-        }
-
-$('#example').bootstrapPaginator(options);
-</script>
