--- a/radar/Tpl/keyword/query.html
+++ b/radar/Tpl/keyword/query.html
@@ -31,10 +31,11 @@
 					<table class="table table-striped table-bordered  table-highlight">
 						<thead>
 							<tr>
-								<th>关键词</th>
-								<th>添加人</th>
-								<th>添加时间</th>
-								<th class="td-actions">操作</th>
+								<th width="50%">关键词</th>
+								<th width="10%">添加人</th>
+								<th width="10%">添加时间</th>
+                                                                <th width="10%">敏感信息</th>
+								<th width="20%" class="td-actions">操作</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -43,8 +44,11 @@
 								<td>{$v.keyword}</td>
 								<td>{$v.operator}</td>
 								<td>{$v.addDate|date="Y-m-d",strtotime(###)}</td>
+                                                                <th><span class="label label-info infonums" dataindex="{$v.id}" id="index{$v.id}">Loading...</span></th>
 								<td class="td-actions">
-									<a href="__URL__/edit?id={$v.id}" class="btn btn-small btn-warning">
+									<a href="javascript:;" class="btn btn-small btn-warning btnrefresh" dataindex="{$v.id}">
+										<i class="btn-icon-only icon-refresh"></i>										
+									</a><a href="__URL__/edit?id={$v.id}" class="btn btn-small btn-warning">
 										<i class="btn-icon-only icon-ok"></i>										
 									</a><a href="__URL__/delete?id={$v.id}" class="btn btn-small" onclick="return confirm('确定删除吗？');">
 										<i class="btn-icon-only icon-trash"></i>										
@@ -54,11 +58,9 @@
                                                   </volist>			
 					  </tbody>
 						</table>
-					{$page}
-						
 				</div>
 				<div class="widget-content text-right">
-				<div id="example" class="pagination10"></div>
+                                <div class="pagination"><ul>{$page}</ul></div>
 				</div>
 			</div>
 		</div>	
@@ -67,11 +69,23 @@
 
 <script src="../Public/js/bootstrap-paginator.min.js"></script>
 <script type="text/javascript">
-var options = {
-            currentPage: 4,
-            totalPages: 10,
-	    	numberOfPages:5
-        }
-
-$('#example').bootstrapPaginator(options);
+$(document).ready(function(e) {
+        function refreshtask(id){
+		$("#index"+id).html("Loading……");
+		$.ajax({
+			type:"GET",
+			url: "__URL__/getkeynums",
+			data:"id="+id,
+			success:function(data){
+			$("#index"+id).html(data);
+			}
+			});
+	}
+	$(".infonums").each(function(){
+		refreshtask($(this).attr("dataindex"));
+	});
+	$(".btnrefresh").click(function(e) {
+                refreshtask($(this).attr("dataindex"));
+        });
+});
 </script>
