--- a/radar/Tpl/keyword/query.html
+++ b/radar/Tpl/keyword/query.html
@@ -44,9 +44,9 @@
 								<td>{$v.keyword}</td>
 								<td>{$v.operator}</td>
 								<td>{$v.addDate|date="Y-m-d",strtotime(###)}</td>
-                                                                <th><span class="label label-info infonums" dataindex="{$v.id}" id="index{$v.id}">Loading...</span></th>
+                                                                <th><span class="badge badge-warning infonums" dataindex="{$v.id}" id="index{$v.id}" style="cursor:pointer;" onclick="location.href='{:U('Warn/query')}';">Loading...</span></th>
 								<td class="td-actions">
-									<a href="javascript:;" class="btn btn-small btn-warning btnrefresh" dataindex="{$v.id}">
+									<a href="javascript:;" class="btn btn-small btn-success btnrefresh" dataindex="{$v.id}">
 										<i class="btn-icon-only icon-refresh"></i>										
 									</a><a href="__URL__/edit?id={$v.id}" class="btn btn-small btn-warning">
 										<i class="btn-icon-only icon-ok"></i>										
