--- a/radar/Tpl/warn/querywarn.html
+++ b/radar/Tpl/warn/querywarn.html
@@ -8,7 +8,7 @@
 						<h3>查询告警信息</h3>
 					</div>
 					<div class="widget-content">
-						<form class="pagination10 form-inline text-center" action="__URL__/query">
+						<form action="__URL__/query" method="get" class="pagination10 form-inline text-center">
 							<div class="input-prepend">
 								<div class="btn-group">
 									<button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -24,7 +24,7 @@
 										</li>
 									</ul>
 								</div>
-								<input class="input-xlarge" type="text"></div>
+								<input name="param" type="text" class="input-xlarge" id="param"></div>
 							<button type="submit" class="btn glow  btn-primary">查询</button>
 						</form>
 
@@ -83,15 +83,15 @@
 							</tbody>
 						</table>
 					</div>
-                                        
+                                        <div class="widget-content text-right"><div class="pagination"><ul>{$page}</ul></div></div>
 					<div class="widget-content">
-                                       		<div class="pagination"><ul>{$page}</ul></div>
 						<div class="text-left span5">
 							<button type="submit" class="btn glow pagination btn-primary text-left">生成简报</button>
 						</div>
 						<div class="text-right span6">
 						</div>
 					</div>
+                                        
 				</div>
 			</div>
 		</div>
