--- a/radar/Tpl/header.html
+++ b/radar/Tpl/header.html
@@ -2,8 +2,8 @@
     <div class="navbar-inner">
         <div class="container">
             
-            <a class="brand" href="#">
-            <img src="../Public/imgs/radar.png" height="40" width="40" />
+            <a class="brand">
+            <img src="../Public/imgs/radar.png" height="40" width="40" style="width:40px; height:40px;" />
                 信息审查雷达
             </a>        
             <div class="nav-collapse collapse">
