--- a/radar/Tpl/warn/querywarn.html
+++ b/radar/Tpl/warn/querywarn.html
@@ -24,7 +24,7 @@
 										</li>
 									</ul>
 								</div>
-								<input name="param" type="text" class="input-xlarge" id="param"></div>
+								<input name="param" type="text" class="input-xlarge" id="param" value="{$param}" placeholder="请输入关键字"></div>
 							<button type="submit" class="btn glow  btn-primary">查询</button>
 						</form>
 
