--- a/radar/Tpl/system/auditlog.html
+++ b/radar/Tpl/system/auditlog.html
@@ -31,11 +31,10 @@
 					<table class="table table-striped table-bordered  table-highlight">
 						<thead>
 							<tr>
-								<th>对象</th>
+								<th width="15%">对象</th>
 								<th>事件</th>
 								<th width="15%">时间</th>
                                                                 <th  width="10%">IP</th>
-								<th class="td-actions">操作</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -45,11 +44,6 @@
 								<td>{$v.operateContent}</td>
 								<td>{$v.operateDate}</td>
                                                                 <td>{$v.ip}</td>
-								<td class="td-actions">
-                                                                <a href="javascript:;" class="btn btn-small">
-										<i class="btn-icon-only icon-remove"></i>										
-									</a>
-								</td>
 							</tr>
                                                         </volist>
 							</tbody>
