--- a/radar/Tpl/site/addsite.html
+++ b/radar/Tpl/site/addsite.html
@@ -1,90 +1,115 @@
 <div class="main">
-    <div class="container">
-      <div class="row">
-        <div class="span12">
-            <div class="widget stacked">
-                <div class="widget-header">
-                    <i class="icon-check"></i>
-                    <h3>添加站点</h3>
-                </div> 
-                <div class="widget-content">
-                    <br />
-                    <form id="validation-form" class="form-horizontal" method="POST">
-                        <fieldset>
-                            <input type="hidden" name="id" value="{$s.id}">
-                            <div class="control-group">
-                              <label class="control-label" for="siteName">网站名称</label>
-                              <div class="controls">
-                                <input type="text" class="input-large" name="siteName" id="siteName" value="{$s.siteName}">
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="feedUrl">入口地址</label>
-                              <div class="controls">
-                                <input type="text" class="input-large" name="feedUrl" id="feedUrl" value="{$s.feedUrl}">
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="adminName">管理员</label>
-                              <div class="controls">
-                                <input type="text" class="input-large" name="adminName" id="adminName" value="{$s.adminName}">
-                              </div>
-                            </div>
-                             <div class="control-group">
-                              <label class="control-label" for="adminTel">管理员电话</label>
-                              <div class="controls">
-                                <input type="text" class="input-large" name="adminTel" id="adminTel" value="{$s.adminTel}">
-                              </div>
-                            </div>
-                             <div class="control-group">
-                              <label class="control-label" for="adminEmail">管理员邮箱</label>
-                              <div class="controls">
-                                <input type="text" class="input-large" name="adminEmail" id="adminEmail" value="{$s.adminEmail}">
-                              </div>
-                            </div>
-                          <div class="control-group">
-                            <label class="control-label" for="monitorExp">监控频率</label>
-                            <div class="controls">
-                              <select id="monitorExp" name="monitorExp">
-                                <option value="">请选择...</option>
-                                <option value="1">每小时</option>
-                                <option value="2">每天</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="control-group">
-                            <label class="control-label" for="runMode">监控模式</label>
-                            <div class="controls">
-                              <select id="runMode" name="runMode" value="{$s.runMode}">
-                                <option value="">请选择...</option>
-                                <option value="1">主动监控</option>
-                                <option value="2">被动监控</option>
-                                <option value="2">两者都有</option>
-                              </select>
-                            </div>
-                          </div>
-                            <div class="control-group">
-                            <label class="control-label">关键词</label>
-                            <div class="controls">
-                              <volist name="keywords" id="keyword">
-                                <label class="checkbox">
-                                <input type="checkbox" name="keywords[]" value="{$keyword.keyword}">
-                                {$keyword.keyword}
-                              </label>
-                              </volist>
-                            </div>
-                          </div>
-                            <div class="form-actions">
-                              <button type="submit" class="btn btn-danger btn">添加</button>&nbsp;&nbsp;
-                              <button type="return" class="btn">返回</button>
-                            </div>
-                          </fieldset>
-                        </form>
-                </div> 
-            </div>              
-        </div>        
-      </div>
-    </div> 
+	<div class="container">
+		<div class="row">
+			<div class="span12">
+				<div class="widget stacked">
+					<div class="widget-header">
+						<i class="icon-check"></i>
+						<h3>添加站点</h3>
+					</div>
+					<div class="widget-content">
+						<br />
+						<form id="validation-form" class="form-horizontal" method="POST">
+							<fieldset>
+								<input type="hidden" name="id" value="{$s.id}">
+								<div class="control-group">
+									<label class="control-label" for="siteName">网站名称</label>
+									<div class="controls">
+										<input type="text" class="input-large" name="siteName"
+											id="siteName" value="{$s.siteName}">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="feedUrl">入口地址</label>
+									<div class="controls">
+										<input type="text" class="input-large" name="feedUrl"
+											id="feedUrl" value="{$s.feedUrl}">
+									</div>
+								</div>
+								<notempty name="s.id">
+								<div class="control-group">
+									<label class="control-label" for="adminName">IP</label>
+									<div class="controls">
+										<input type="text" class="input-large disabled" disabled="" value="{$s.ip}">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="adminName">所在城市</label>
+									<div class="controls">
+										<input type="text" class="input-large disabled" disabled="" value="{$s.city}">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="adminName">运营商</label>
+									<div class="controls">
+										<input type="text" class="input-large disabled" disabled="" value="{$s.netsp}">
+									</div>
+								</div>
+								</notempty>
+								<div class="control-group">
+									<label class="control-label" for="adminName">管理员</label>
+									<div class="controls">
+										<input type="text" class="input-large" name="adminName"
+											id="adminName" value="{$s.adminName}">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="adminTel">管理员电话</label>
+									<div class="controls">
+										<input type="text" class="input-large" name="adminTel"
+											id="adminTel" value="{$s.adminTel}">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="adminEmail">管理员邮箱</label>
+									<div class="controls">
+										<input type="text" class="input-large" name="adminEmail"
+											id="adminEmail" value="{$s.adminEmail}">
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="monitorExp">监控频率</label>
+									<div class="controls">
+										<select id="monitorExp" name="monitorExp">
+											<option value="">请选择...</option>
+											<option value="1">每小时</option>
+											<option value="2">每天</option>
+										</select>
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label" for="runMode">监控模式</label>
+									<div class="controls">
+										<select id="runMode" name="runMode" value="{$s.runMode}">
+											<option value="">请选择...</option>
+											<option value="1">主动监控</option>
+											<option value="2">被动监控</option>
+											<option value="2">两者都有</option>
+										</select>
+									</div>
+								</div>
+								<div class="control-group">
+									<label class="control-label">关键词</label>
+									<div class="controls">
+										<volist name="keywords" id="keyword"> <label
+											class="checkbox"> <input type="checkbox"
+											name="keywords[]" value="{$keyword.keyword}">
+											{$keyword.keyword}
+										</label> </volist>
+									</div>
+								</div>
+								<div class="form-actions">
+									<button type="submit" class="btn btn-danger btn">添加</button>
+									&nbsp;&nbsp;
+									<button type="return" class="btn">返回</button>
+								</div>
+							</fieldset>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <script type="text/javascript">
 $("#monitorExp").find("option[value='{$s.monitorExp}']").attr("selected",true);
