--- a/radar/Tpl/include.html
+++ b/radar/Tpl/include.html
@@ -22,4 +22,5 @@
 <script src="../Public/js/bootstrap.min.js"></script>
 <script src="../Public/js/messenger.min.js"></script>
 <script src="../Public/js/animateBackground-plugin.js"></script>
+<script src="../Public/js/Application.js"></script>
 <!-- <script src="../Public/js/zepto.icheck.js"></script> -->
