--- a/radar/Tpl/index1.html
+++ b/radar/Tpl/index1.html
@@ -38,7 +38,7 @@
       		<div class="widget stacked">
 				<div class="widget-header">
 					<i class="icon-signal"></i>
-					<h3>可疑信息趋势</h3>
+					<h3>日增加监控站点曲线图</h3>
 				</div>
 				<div class="widget-content">					
 					<img src="../Public/imgs/charts.png"/>
@@ -50,7 +50,7 @@
       		<div class="widget stacked">
 				<div class="widget-header">
 					<i class="icon-signal"></i>
-					<h3>可疑信息趋势</h3>
+					<h3>日增加链接趋势曲线图</h3>
 				</div>
 				<div class="widget-content">					
 					<img src="../Public/imgs/charts.png"/>
@@ -62,7 +62,7 @@
       		<div class="widget stacked">
 				<div class="widget-header">
 					<i class="icon-signal"></i>
-					<h3>可疑信息趋势</h3>
+					<h3>日增加可疑信息趋势曲线图</h3>
 				</div>
 				<div class="widget-content">					
 					<img src="../Public/imgs/charts.png"/>
