--- a/radar/Tpl/menu.html
+++ b/radar/Tpl/menu.html
@@ -37,7 +37,6 @@
                             <li><a href="__APP__/Site/add">添加监控站点</a></li>
                         </ul>               
                     </li>
-                    
                     <li class="dropdown" id="Warn">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-warning-sign"></i>
@@ -47,6 +46,16 @@
                         <ul class="dropdown-menu">
                             <li><a href="__APP__/Warn/query">查询告警信息</a></li>
                         </ul>                   
+                    </li>
+                    <li class="dropdown" id="Warn">                   
+                        <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="icon-bar-chart"></i>
+                            <span>监控报表</span>
+                            <b class="caret"></b>
+                        </a>    
+                        <ul class="dropdown-menu">
+                            <li><a href="__APP__/Report/open">监控报表</a></li>
+                        </ul> 
                     </li>
                     <li class="dropdown" id="Search">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
