--- a/radar/Tpl/index1.html
+++ b/radar/Tpl/index1.html
@@ -41,7 +41,7 @@
 					<h3>日增加监控站点曲线图</h3>
 				</div>
 				<div class="widget-content">					
-					<img src="../Public/imgs/charts.png"/>
+					{$chart_sitepage}
 				</div>
 			</div>
 	    </div>
@@ -53,7 +53,7 @@
 					<h3>日增加链接趋势曲线图</h3>
 				</div>
 				<div class="widget-content">					
-					<img src="../Public/imgs/charts.png"/>
+					{$chart_daypage}
 				</div>
 			</div>
 	    </div>
@@ -65,7 +65,7 @@
 					<h3>日增加可疑信息趋势曲线图</h3>
 				</div>
 				<div class="widget-content">					
-					<img src="../Public/imgs/charts.png"/>
+					{$chart_keypage}
 				</div>
 			</div>
 	    </div>
