--- a/radar/Tpl/menu.html
+++ b/radar/Tpl/menu.html
@@ -55,6 +55,7 @@
                         </a>    
                         <ul class="dropdown-menu">
                             <li><a href="__APP__/Report/open">监控报表</a></li>
+                            <li><a href="__APP__/Report/keypage">可疑信息报表</a></li>
                         </ul> 
                     </li>
                     <li class="dropdown" id="Search">                   
