--- a/radar/Tpl/menu.html
+++ b/radar/Tpl/menu.html
@@ -50,7 +50,7 @@
                     <li class="dropdown" id="Warn">                   
                         <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="icon-bar-chart"></i>
-                            <span>监控报表</span>
+                            <span>统计报表</span>
                             <b class="caret"></b>
                         </a>    
                         <ul class="dropdown-menu">
