--- a/radar/Tpl/system/viewfailsite.html
+++ b/radar/Tpl/system/viewfailsite.html
@@ -13,21 +13,13 @@
 						<table class="table table-striped table-bordered  table-highlight">
 							<thead>
 								<tr>
-									<th>站点名称</th>
-									<th>收集链接数量</th>
-									<th>操作</th>
+									<th>链接</th>
 								</tr>
 							</thead>
 							<tbody>
-								<volist name="failrecords" id="v">
+								<volist name="links" id="v">
 								<tr>
-									<td>{$v.siteName}</td>
-									<td>{$v.c}</td>
-									<td>
-									<a href="__URL__/viewDetail?siteId={$v.siteId}" class="btn btn-small btn-warning">
-										<i class="btn-icon-only icon-zoom-in"></i>
-									</a>
-									</td>
+									<td><a href="{$v.link}" target="_blank">{$v.link}</a></td>
 								</tr>
 								</volist>
 							</tbody>
